beacon-text overlapping fix

--- a/04_favorite.jade
+++ b/04_favorite.jade
@@ -89,10 +89,12 @@ html
               h5 $25 off 
               h6 your total bill, lets see it when this get extended to two lines 
 
-              div.favorite-geo.top-buffer-sm
-                div.geo-city Costa Mesa,
-                  span.geo-state  CA
-                div.geo-mile 1.1 miles
+              div.geo-location.top-buffer-sm
+                div.geo-location__icon
+                  div.padding-left--small
+                    span.geo-location__city Costa Mesa,
+                    span.geo-location__state CA
+                div.geo-location__mile 1.1 miles
           
           
           
@@ -103,10 +105,13 @@ html
               h5 $25 off bla bla bla
               h6 your total bill
 
-              div.favorite-geo.top-buffer-sm
-                div.geo-city Costa Mesa,
-                  span.geo-state  CA
-                div.geo-mile 1.1 miles
+              div.geo-location.top-buffer-sm
+                div.geo-location__icon
+                  div.padding-left--small
+                    span.geo-location__city Costa Mesa,
+                    span.geo-location__state CA
+                div.geo-location__mile 1.1 miles
+          
                           
 
           
