--- a/08_redeemMobile.jade
+++ b/08_redeemMobile.jade
@@ -98,10 +98,17 @@ html
               h5 $25 off 
               h6 your total bill, lets see it when this get extended to two lines 
               
-              div.redeem-geo.top-buffer-xs
-                div.geo-city Costa Mesa,
-                  span.geo-state  CA
-                div.geo-mile 1.1 miles
+              //- div.redeem-geo.top-buffer-xs
+              //-   div.geo-city Costa Mesa,
+              //-     span.geo-state  CA
+              //-   div.geo-mile 1.1 miles
+              
+              div.geo-location.top-buffer-xs
+                div.geo-location__icon
+                  div.padding-left--small
+                    span.geo-location__city Costa Mesa,
+                    span.geo-location__state CA
+                div.geo-location__mile 1.1 miles
                 
               button.btn-action.btn-3 direction
               button.btn-action.btn-1 ready to redeem
