invitation form  tuck in, initial screen in iphone6/7 375*667

--- a/01_index.jade
+++ b/01_index.jade
@@ -78,9 +78,9 @@ html
         
     section.headline.top-buffer
       div.row.justify-content-center
-        h1 special Offer for new homeowners only
+        h1.headline__main-title special Offer for new homeowners only
       div.row.justify-content-center
-        p These local offers are exclusively for new owners and cannot be found anywhere else. Access to the very best offers for the first 90 days in your new home.
+        p.headline__sub-title These local offers are exclusively for new owners and cannot be found anywhere else. Access to the very best offers for the first 90 days in your new home.
     
     section.family.top-buffer
       img.image-desktop(src="image/family.png")
