--- a/css/main.sass
+++ b/css/main.sass
@@ -1,3 +1,4 @@
+
 // load web fonts
 @font-face
   font-family: 'Sequel'
@@ -151,7 +152,7 @@ p, span
 	font: 400 17px $BG
 	color: #506a75
 
-span.bold
+.bold
 	font: 700 18px $BG
 	color: $slateGrey
 
@@ -307,15 +308,15 @@ legend
 	display: inline-block
 // vertical spacing
 .top-buffer
-  margin-top: 4vh
+  margin-top: 40px
   @include xs
-    margin-top: 2vh
+    margin-top: 20px
 .top-buffer-sm
-  margin-top: 2vh
+  margin-top: 20px
   @include xs
-    margin-top: 1vh
+    margin-top: 10px
 .top-buffer-xs
-  margin-top: 1vh
+  margin-top: 10px
 
 button:disabled
 
@@ -745,7 +746,7 @@ img.cat-icon
 
 .header-shift
   width: 100%
-  height: 80px
+  height: 60px
 
 
 .geo-location
@@ -786,12 +787,21 @@ img.cat-icon
 // style for HOME page
 section.headline
   text-align: center
-  h1
-  p
-    width: 60%
-    max-wdith: 640px
+  .headline__main-title
+    line-height: 1.2
     @include xs
-      width: 80%
+      line-height: 1
+
+  .headline__sub-title
+    width: 60%
+    max-width: 640px
+    @include xs
+      width: 90%
+      line-height: 1
+      margin-bottom: 0
+      padding-top: 10px
+
+
 
 
 .expand
@@ -811,7 +821,6 @@ section.family
 		@include xs
 			display: block
 
-
 	div.invite
 		width: 100%
 		padding: 5vh 0
@@ -825,6 +834,8 @@ section.family
 			position: relative
 			background: rgba(25, 49, 70, .9)
 			transform: translateY(0%)
+
+
 	div.invite
 		form.form-regular
 			h3
